2012-02-04  Helmut Eller <eller.helmut@gmail.com>

	* TelnetRepl.java (serve): Return a vanilla Thread, rather than a
	Future.  This avoids a force if displaying, and seems more appropriate.

2012-01-31  Per Bothner  <per@bothner.com>

	* standard/require.java (importDefinitions): Add a null check.

	* standard/Scheme.java (initScheme): New functions 'force*'.

	* standard/object.java (scanClassDef): Set IS_ABSTRACT if interface
	specified explicitly.

2012-01-29  Per Bothner  <per@bothner.com>

	* lang/Translator.java (exp2Type): Take extra syntax parmeter 
	so we can pass it to rewrite.
	* standard/let.java (rewrite): Pass syntax to exp2Type.
	* lang/Lambda.java: Update exp2Type call..
	* standard/object.java: Likewise.

2012-01-27  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Fix binding for "call/cc".

	* standard/Scheme.java (initScheme): Declare promise-set-value!,
	promise-set-alias!, promise-set-exception!, and promise-set-thunk!.
	(getTypeName): Change binding for "promise".

2012-01-24  Per Bothner  <per@bothner.com>

	* lang/SyntaxPattern.java (allocVars):  Don't copy more from
	inherited array than is in it.

2012-01-21  Per Bothner  <per@bothner.com>

	* lang/Quote.java (expand):  If quasi-quoting a vector, return
	a ConstVector, not a (mutable) FVector.
	* standard/vector_appane.java (appendToConstVector): New method.

	* standard/object.java (scanClassDef): If seen ABSTRACT_ACCESS
	then set IS_ABSTRACT on ClassExp.
	(matchAccess1):  Map "abstract" to ABSTRACT_ACCESS.

2012-01-19  Per Bothner  <per@bothner.com>

	* lang/SyntaxForms.java (identifierEquals): New static method.
	(freeIdentifierEquals): Removed - subsumed by identifierEquals.
	* standard/Scheme.java (initScheme): Define bound-identifier=?.

2012-01-17  Per Bothner  <per@bothner.com>

	* standard/expt.java (expt): Force operands.

2012-01-15  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Define "lazy" and "eager"
	from SRFI-45 and R7RS.