@@ -1,3 +1,8 @@
+2012-02-05  Per Bothner  <per@bothner.com>
+
+	* lang/TemplateScope.java (make): Make more robust in case
+	syntax/quasisyntax is used in an non-macro context.
+
 2012-02-04  Helmut Eller <eller.helmut@gmail.com>
 
 	* TelnetRepl.java (serve): Return a vanilla Thread, rather than a
